[tool.poetry]
name = "cozy-sleep-analyzer"
version = "0.1.0"
description = "An app that analyzes Spotify listening data and YouTube watch hours to assess sleep patterns."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
requests = "^2.26.0"
pandas = "^1.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"