[metadata]
name = cozy-sleep-analyzer
version = 0.1.0
description = An app that analyzes Spotify listening data and YouTube watch hours to assess sleep patterns.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/cozy-sleep-analyzer
license = MIT

[options]
packages = find:
install_requires =
    PyQt5
    requests
    pandas
    numpy
    matplotlib
    spotipy

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py`
python_classes = *Tests
python_functions = test_*